log
Thu 28 Sep 2023 01:10:27 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:19: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   39 |   Nuevo->heapArray=(int*) malloc(sizeof(int) * Nuevo->capac);
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
068fd16
Thu 28 Sep 2023 01:12:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:20: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   39 |   Nuevo->heapArray = (int*) malloc(sizeof(int) * Nuevo->capac);
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
051fb74
Thu 28 Sep 2023 01:14:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4e1a374
Thu 28 Sep 2023 01:20:45 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   22 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d258ccf
Thu 28 Sep 2023 01:20:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
669fa66
Thu 28 Sep 2023 01:25:21 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
14766c1
Thu 28 Sep 2023 01:26:23 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
d4f6f83
Thu 28 Sep 2023 01:26:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
082b6ef
Thu 28 Sep 2023 01:27:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
2647169
Thu 28 Sep 2023 01:27:46 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
413cfa5
Thu 28 Sep 2023 01:32:52 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
17742d0
Thu 28 Sep 2023 01:34:38 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:20: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   37 |   Nuevo.priority = p;
      |                    ^
      |                    pq
heap.c:37:20: note: each undeclared identifier is reported only once for each function it appears in
heap.c:35:12: error: variable ‘Nuevo’ set but not used [-Werror=unused-but-set-variable]
   35 |   heapElem Nuevo;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
c94253c
Thu 28 Sep 2023 01:35:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:18: error: assignment to ‘int’ from ‘Heap *’ {aka ‘struct Heap *’} makes integer from pointer without a cast [-Werror=int-conversion]
   37 |   Nuevo.priority = pq;
      |                  ^
heap.c:35:12: error: variable ‘Nuevo’ set but not used [-Werror=unused-but-set-variable]
   35 |   heapElem Nuevo;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
f3ed2ff
Thu 28 Sep 2023 01:36:31 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:18: error: assignment to ‘int’ from ‘Heap *’ {aka ‘struct Heap *’} makes integer from pointer without a cast [-Werror=int-conversion]
   37 |   Nuevo.priority = pq;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
4c33d8f
Thu 28 Sep 2023 01:37:36 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:37:20: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   37 |   Nuevo.priority = p;
      |                    ^
      |                    pq
heap.c:37:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e5a3cc8
Thu 28 Sep 2023 01:38:24 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
d7ada0f
